React Resizer -- CSS Fix when index name too long

--- a/packages/kbn-ui-framework/src/components/panel_resizer/_panel_resizer.scss
+++ b/packages/kbn-ui-framework/src/components/panel_resizer/_panel_resizer.scss
@@ -18,3 +18,14 @@
 
   height: 100%;
 }
+
+
+.kbnCollapsibleSidebar__collapseButton {
+  z-index: 1 !important;;
+}
+
+#discover-sidebar {
+  .dscFieldChooserContainer {
+    width: 100%;
+  }
+}
